fix: align navbar icons vertically by setting display block on svg icon

--- a/src/style/ToolsIcon.css
+++ b/src/style/ToolsIcon.css
@@ -1,5 +1,6 @@
 .icon {
   width: 24px;
   height: 24px;
-  color: white; /* oppure #ccc */
+  color: white;
+  display: block;
 }
